jsonschemadsl2ecore.trafo.opt/test/test66/validtests/example4.test66
{
	"prop1":{},
	"prop3":{},
	"add1":"ADD_something"
}   