jsonschemadsl2ecore.trafo.opt/test/test66/invalidtests/example2.test66
{
	"prop1":{},
	"prop3":{"foo":"bar"}
} 